# idf-component-manager

./: .bandit  .codespellrc  .editorconfig  .env.example  .env.vcr  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .style.yapf  .yapfignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  changelog.md  components.py  components_ext.py  idf_project.yml  manifest.yml  mypy.ini  prepare.py  publish.sh  pyproject.toml  pytest_integration.ini  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Feature-request.yml  Issue-report.yml  bug_report.md  config.yml  feature_request.md
.github/workflows/: dangerjs_pr_checks.yml  issue_comment.yml  new_issues.yml  new_prs.yml
ci/: Dockerfile  build_docker.yml  build_docker.yml.j2  check_copyright.py  check_copyright_config.yaml  check_copyright_ignore  common.yml  diff_docs.py  integration_tests.yml  integration_tests.yml.j2  prepare_tests.py  tests.yml
component_manager/: __init__.py  __version__.py  api_client.py  cmake_builder.py  core.py  file_cache.py  manifest.py  manifest_builder.py  manifest_example.yml  manifest_pipeline.py  manifest_validator.py
component_manager/component_sources/: __init__.py  base.py  builder.py  cache.py  fetcher.py  git.py  idf.py  local.py  result.py  service.py  source.py  storage.py  web_service.py
component_manager/lock/: __init__.py  hash_tools.py  manager.py  parser.py
component_manager/utils/: archive.py  errors.py  file_cache.py  file_tools.py  git_client.py  hash_tools.py
component_manager/version_solver/: __init__.py  solver_result.py  version_solver.py
contributing_docs/diagrams/: download_dependencies.md  validate_hashfile_eq_hashdir.md  web_service_download.md
docs/: README.md  conf_common.py  page_redirects.txt  requirements.txt
docs/_static/: theme_overrides.css  theme_overrides_component_manager.css
docs/_templates/: layout.html
docs/en/: conf.py  getting_started.rst  index.rst  packaging_components.rst  versioning.rst
fixtures/vcr_cassettes/: test_component_details.yaml  test_component_versions.yaml  test_fetch_webservice.yaml
hooks/: check_versions.sh
idf_component_manager/: __init__.py  __main__.py  __version__.py  api_client.py  cli.py  cmake_component_requirements.py  config.py  context_manager.py  core.py  core_utils.py  dependencies.py  idf_extensions.py  local_component_list.py  manifest.py  manifest_builder.py  manifest_example.yml  manifest_pipeline.py  manifest_validator.py  service_details.py  sync.py  utils.py
idf_component_manager/cli/: __init__.py  autocompletion.py  cache.py  component.py  config.py  constants.py  core.py  manifest.py  project.py  registry.py  utils.py  validations.py
idf_component_manager/component_sources/: base.py  builder.py  constants.py  errors.py  fetcher.py  git.py  idf.py  local.py  web_service.py
idf_component_manager/prepare_components/: README.md  __main__.py  cmake_pid.py  prepare.py
idf_component_manager/templates/: idf_component_template.yml
idf_component_manager/utils/: file_tools.py  git_client.py
idf_component_manager/version_solver/: constraint_file.py  helper.py  solver_result.py  version_solver.py
idf_component_tools/: __init__.py  __version__.py  api_client.py  api_client_errors.py  api_schemas.py  archive_tools.py  build_system_tools.py  config.py  constants.py  debugger.py  environment.py  errors.py  file_cache.py  file_tools.py  git_client.py  hash_tools.py  hash_validator.py  logging.py  manager.py  messages.py  network_tools.py  serialization.py  utils.py
idf_component_tools/hash_tools/: calculate.py  checksums.py  constants.py  errors.py  validate.py  validate_managed_component.py  validator.py
idf_component_tools/lock/: __init__.py  manager.py
idf_component_tools/manifest/: __init__.py  constant.py  constants.py  env_expander.py  if_parser.py  manager.py  manifest.py  metadata.py  models.py  schemas.py  solved_component.py  solved_manifest.py  validator.py
idf_component_tools/registry/: api_client.py  api_client_errors.py  api_models.py  api_schemas.py  base_client.py  component_details.py  multi_storage_client.py  request_processor.py  service_details.py  storage_client.py  token_auth.py
idf_component_tools/semver/: __init__.py  base.py
idf_component_tools/sources/: __init__.py  base.py  constants.py  fetcher.py  git.py  idf.py  local.py  utils.py  (+2 more)
integration_tests/: README.md  conftest.py  integration_test_helpers.py  test_add_dependency.py  test_component_sources.py  test_component_types.py  test_compote.py  test_example_project.py  test_git_source.py  test_integration.py  test_kconfig.py  test_kconfig_cmake_function.py  test_local_source.py  test_local_storage.py  test_lock.py  test_mananged_components_dir.py  test_manifest.py  test_optional_requirements.py  test_override_path.py  test_overrides.py  test_prepare_dep_dirs_kconfig.py  test_remove_dependency.py  test_targets.py  test_version_solver.py
tests/: conftest.py  context.py  fake_bad_git.py  fake_git.py  network_test_utils.py  test_api_client.py  test_archive_tools.py  test_cli.py  test_cmake_component_requirements.py  test_component_manager.py  test_component_manager_run_counter.py  test_component_sources.py  test_components_base.py  test_components_core.py  test_config.py  test_core.py  test_core_utils.py  test_fetcher.py  test_file_tools.py  test_git_client.py  test_hash_tools.py  test_hash_validator.py  test_local_component_list.py  test_lock.py  test_manifest.py  test_manifest_common_cases.py  test_mirror_sync.py  test_misc.py  test_prepare_copyfile_or_raise.py  test_prepare_dep_dirs.py  test_profile.py  test_registry_url.py  test_serialize.py  test_service_details.py  test_solver_result.py  test_utils.py  test_utils_archive.py  test_utils_git_client.py
tests/fixtures/components/cmp_with_cmake_function/cmp_cmake_function/: CMakeLists.txt  cmp_cmake_function.c  idf_component.yml
tests/fixtures/components/cmp_with_cmake_function/cmp_cmake_function/include/: cmp_cmake_function.h
(+281 files in other folders)
