

[tool.poetry]
name = "idf-component-manager"
version = "1.5.0-dev1"
description = "Espressif IDF Component Manager"
authors = []
license = "Apache2"
readme = "README.md"
packages = [
    { include = "idf_component_manager" },
    { include = "idf_component_tools" },
]

[tool.poetry.dependencies]
cachecontrol = { version = '*', extras = ["filecache"] }
click = '*'
colorama = '*'
packaging = "*"
pyparsing = '*'
python = ">=3.8,<4.0"
pyyaml = "*"
requests = "*"
requests-file = "*"
requests-toolbelt = "*"
schema = "*"
six = "*"
tqdm = '*'
urllib3 = "<2"

[tool.poetry.group.docs.dependencies]
sphinx_collapse = "==0.1.2"
sphinx-click = "==4.4.0"
sphinx-copybutton = "==0.5.1"
sphinx-rtd-theme = "==1.1.1"
sphinx-tabs = "==3.4.0"

[tool.poetry.group.dev.dependencies]
black = { version = "==23.7.0", python = ">=3.8,<4.0" }
comment-parser = "*"
commitizen = { version = "^3.13.0", python = ">=3.8,<4.0" }
coverage = '*'
deptry = { version = ">=0.12.0", python = ">=3.9,<4.0" }
flake8 = '*'
Flake8-pyproject = "*"
flake8-pyproject = "^1.2.3"
flake8-quotes = '*'
jinja2 = "*"
jsonschema = "*"
mypy = { extras = ["python2"], version = '*' }
pexpect = "*"
pre-commit = '*'
pytest = '*'
pytest-cov = '*'
pytest-mock = '*'
pytest-rerunfailures = "*"
requests-mock = "^1.11.0"
rope = '*'
setuptools = "*"
thefuzz = "*"
twine = "*"
types-pyyaml = "^6.0.12.10"
types-requests = "^2.31.0.1"
types-six = "^1.16.21.8"
unify = '*'
vcrpy = '<5'
wheel = "*"

[tool.poetry.scripts]
compote = { callable = "idf_component_manager.cli:safe_cli" }

[tool.black]
target-version = ['py35']
line-length = 100
skip-string-normalization = true

[tool.isort]
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
indent = '    '
multi_line_output = 3
force_grid_wrap = 0

[tool.flake8]
select = [
    'F401',
    'F402',
    'F403',
    'F404',
    'F405',
    'F406',
    'F407',
    'F601',
    'F602',
    'F621',
    'F622',
    'F631',
    'F701',
    'F702',
    'F703',
    'F704',
    'F705',
    'F706',
    'F707',
    'F721',
    'F722',
    'F811',
    'F812',
    'F821',
    'F822',
    'F823',
    'F831',
    'F841',
    'F901',
    'E101',
    'E111',
    'E112',
    'E113',
    'E114',
    'E115',
    'E116',
    'E121',
    'E122',
    'E123',
    'E124',
    'E125',
    'E126',
    'E127',
    'E128',
    'E129',
    'E131',
    'E133',
    'E201',
    'E202',
    'E203',
    'E211',
    'E221',
    'E222',
    'E223',
    'E224',
    'E225',
    'E226',
    'E227',
    'E228',
    'E231',
    'E241',
    'E242',
    'E251',
    'E261',
    'E262',
    'E265',
    'E266',
    'E271',
    'E272',
    'E273',
    'E274',
    'E275',
    'E301',
    'E302',
    'E303',
    'E304',
    'E305',
    'E306',
    'E401',
    'E402',
    'E501',
    'E502',
    'E701',
    'E702',
    'E703',
    'E704',
    'E711',
    'E712',
    'E713',
    'E714',
    'E721',
    'E722',
    'E731',
    'E741',
    'E742',
    'E743',
    'E901',
    'E902',
    'W191',
    'W291',
    'W292',
    'W293',
    'W391',
    'W503',
    'W504',
    'W505',
    'W601',
    'W602',
    'W603',
    'W604',
    'W605',
    'W606',
    'E999',
    'C901',
]
ignore = ['E221', 'E231', 'E241', 'W503', 'W504']
max-line-length = 100
show-source = true
statistics = true
exclude = '.git,.tox,node_modules/*'
inline-quotes = 'double'
multiline-quotes = 'double'
docstring-quotes = 'double'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = "idf_component_manager.version_solver.mixology.*"
ignore_errors = true

[tool.deptry]
extend_exclude = [
    "docs",
    "integration_tests",
    "idf_component_tools/file_cache.py", # Tries a number of ways to detect paths on Windows
]

[tool.deptry.per_rule_ignores]
DEP001 = ["urlparse", "idf_py_actions", "functools32", "httplib"]
DEP002 = ["colorama", "urllib3"]

[tool.deptry.package_module_name_map]
pyyaml = ["yaml"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
version_files = ["idf_component_tools/__version__.py:__version__"]
update_changelog_on_bump = true
bump_message = "change: bump version from v$current_version to v$new_version"
